# chwit-plays

./: .gitignore  Docker-compose.yaml  README.MD  docker-compose.yaml
API/: .env  Dockerfile  main.py  requirements.txt
Broadcaster/: Broadcaster.vcxproj  Broadcaster.vcxproj.filters  Main.cpp  es6.cpp  glad.c  output.avi
Broadcaster/Capture/: Capturer.cpp  Capturer.h
Broadcaster/Graphics/: Camera.cpp  Camera.h  Renderer.cpp  Texture.cpp  Texture.h  VAO.cpp  VBO.cpp  VBO.h  shaderClass.cpp  shaderClass.h
Broadcaster/Libraries/lib/: glfw3.lib
Broadcaster/Objects/: Cube.h
Broadcaster/Resources/Shaders/: default.frag
Broadcaster/database/camera/: 0
Broadcaster/database/scene/: 0
MongoDB/: Dockerfile
MongoDB/init-data/: 01-create-db.js  02-import-db.sh
Web/: app.js  index.html
broadcaster/: Broadcaster.sln  CMakeLists.txt  Dockerfile  Main.cpp  api.h  es4.cpp  main.cpp
broadcaster/Graphics/: Renderer.cpp  VAO.h  shaderClass.cpp  shaderClass.h
broadcaster/Objects/: Object.h
broadcaster/Resources/Shaders/: default.frag  default.vert
broadcaster/database/scene/: 0
broadcaster/resources/shaders/: default.frag
broadcaster/src/api/: api.cpp  api.h
broadcaster/src/capture/: capturer.cpp  capturer.h
broadcaster/src/graphics/: VAO.h  camera.cpp  camera.h  renderer.cpp  renderer.h  shaderClass.cpp  texture.cpp  texture.h
broadcaster/src/objects/: cube.cpp  cube.h  object.cpp  object.h
init-data/: 02-import-db.sh
init-data/data/: init_camera.json  init_scene.json
troadcaster/: Broadcaster.vcxproj  Broadcaster.vcxproj.filters  api.cpp  es5.cpp
troadcaster/Capture/: Capturer.h
troadcaster/Graphics/: Camera.cpp  EBO.cpp  EBO.h  Renderer.h
troadcaster/Libraries/include/glad/: glad.h
troadcaster/Objects/: Cube.cpp  Object.cpp
web/: Dockerfile  app.js  default.conf  gameboy.css  index.html  style.css
